[package]
name = "eighty"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = "2.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
rayon = "1.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
handlebars = { version = "4.1", features = ["dir_source"] }